--- a/spriteMaker/spriteMaker/PopupStoryboards/AnimatedPreviewPopupViewController.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/AnimatedPreviewPopupViewController.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,87 +23,55 @@
                                     <outletCollection property="gestureRecognizers" destination="4Xc-9l-Dd7" appends="YES" id="rHy-lG-19e"/>
                                 </connections>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jxw-K6-M5b">
-                                <rect key="frame" x="255" y="244" width="130.5" height="120"/>
-                                <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V81-g5-gZ6">
-                                        <rect key="frame" x="10" y="0.0" width="110.5" height="120"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HGt-0D-QsO">
-                                            <size key="itemSize" width="105.5" height="52"/>
-                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
-                                        </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AnimatedPreviewPopupCell" id="veE-be-cV0" customClass="AnimatedPreviewPopupCell" customModule="spriteMaker" customModuleProvider="target">
-                                                <rect key="frame" x="2.5" y="10" width="105.5" height="52"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="TyA-nu-t8h">
-                                                    <rect key="frame" x="0.0" y="0.0" width="105.5" height="52"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <subviews>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8j4-qZ-1cY">
-                                                            <rect key="frame" x="0.0" y="0.0" width="105.5" height="52"/>
-                                                        </view>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wID-WZ-ATz">
-                                                            <rect key="frame" x="28.5" y="15.5" width="49" height="21.5"/>
-                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="wID-WZ-ATz" firstAttribute="centerY" secondItem="8j4-qZ-1cY" secondAttribute="centerY" id="BWU-RJ-9DG"/>
-                                                        <constraint firstItem="8j4-qZ-1cY" firstAttribute="leading" secondItem="TyA-nu-t8h" secondAttribute="leading" id="mb7-3Y-LoI"/>
-                                                        <constraint firstItem="8j4-qZ-1cY" firstAttribute="top" secondItem="TyA-nu-t8h" secondAttribute="top" id="ve9-mj-G62"/>
-                                                        <constraint firstAttribute="bottom" secondItem="8j4-qZ-1cY" secondAttribute="bottom" id="wGj-hd-Ju5"/>
-                                                        <constraint firstAttribute="trailing" secondItem="8j4-qZ-1cY" secondAttribute="trailing" id="wi6-2R-6sP"/>
-                                                        <constraint firstItem="wID-WZ-ATz" firstAttribute="centerX" secondItem="8j4-qZ-1cY" secondAttribute="centerX" id="xsP-dH-iKK"/>
-                                                    </constraints>
-                                                </collectionViewCellContentView>
-                                                <size key="customSize" width="105.5" height="52"/>
-                                                <connections>
-                                                    <outlet property="categoryLabel" destination="wID-WZ-ATz" id="kO7-yA-FsI"/>
-                                                </connections>
-                                            </collectionViewCell>
-                                        </cells>
-                                        <connections>
-                                            <outlet property="dataSource" destination="X4g-Ww-Kze" id="rdp-8v-6U2"/>
-                                            <outlet property="delegate" destination="X4g-Ww-Kze" id="OBj-mc-s5t"/>
-                                        </connections>
-                                    </collectionView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.1808672818" green="0.1808672818" blue="0.1808672818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstItem="V81-g5-gZ6" firstAttribute="top" secondItem="Jxw-K6-M5b" secondAttribute="top" id="3cK-6a-i31"/>
-                                    <constraint firstItem="V81-g5-gZ6" firstAttribute="leading" secondItem="Jxw-K6-M5b" secondAttribute="leading" constant="10" id="J5O-Rb-CCc"/>
-                                    <constraint firstAttribute="trailing" secondItem="V81-g5-gZ6" secondAttribute="trailing" constant="10" id="Y1X-WR-44V"/>
-                                    <constraint firstAttribute="width" constant="130.5" id="YL9-mO-Xw1"/>
-                                    <constraint firstAttribute="bottom" secondItem="V81-g5-gZ6" secondAttribute="bottom" id="ZXv-b4-JOV"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eGC-Ta-E5m">
-                                <rect key="frame" x="50" y="244" width="200" height="120"/>
+                                <rect key="frame" x="50" y="244" width="200" height="150"/>
                                 <subviews>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bc0-qL-TSC">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
+                                        <rect key="frame" x="0.0" y="20" width="200" height="90"/>
                                         <connections>
                                             <outlet property="dataSource" destination="X4g-Ww-Kze" id="AoA-eS-vaJ"/>
                                             <outlet property="delegate" destination="X4g-Ww-Kze" id="d6k-jm-pnK"/>
                                         </connections>
                                     </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kIi-0N-w6j">
+                                        <rect key="frame" x="0.0" y="110" width="200" height="40"/>
+                                        <color key="backgroundColor" white="0.17999999999999999" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="BU7-By-IoP"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="pause.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="black"/>
+                                        </state>
+                                        <state key="selected" image="play.fill" catalog="system"/>
+                                        <connections>
+                                            <action selector="tappedPauseBtn:" destination="X4g-Ww-Kze" eventType="touchUpInside" id="PsK-AM-nO9"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SzQ-zh-fA3">
+                                        <rect key="frame" x="165" y="10" width="25" height="24"/>
+                                        <color key="tintColor" white="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="xmark.circle.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="closePopupView:" destination="X4g-Ww-Kze" eventType="touchUpInside" id="6sH-XO-VSO"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.17999999999999999" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="bc0-qL-TSC" firstAttribute="top" secondItem="eGC-Ta-E5m" secondAttribute="top" id="NzO-ca-z34"/>
+                                    <constraint firstItem="kIi-0N-w6j" firstAttribute="leading" secondItem="eGC-Ta-E5m" secondAttribute="leading" id="Baj-M6-qVm"/>
+                                    <constraint firstItem="kIi-0N-w6j" firstAttribute="top" secondItem="bc0-qL-TSC" secondAttribute="bottom" id="G5a-ci-vQS"/>
+                                    <constraint firstItem="bc0-qL-TSC" firstAttribute="top" secondItem="eGC-Ta-E5m" secondAttribute="top" constant="20" id="NzO-ca-z34"/>
                                     <constraint firstAttribute="width" constant="200" id="Qqq-EO-ZqI"/>
+                                    <constraint firstAttribute="bottom" secondItem="kIi-0N-w6j" secondAttribute="bottom" id="S6P-DO-U1k"/>
                                     <constraint firstAttribute="trailing" secondItem="bc0-qL-TSC" secondAttribute="trailing" id="ZDi-CQ-Rkh"/>
                                     <constraint firstItem="bc0-qL-TSC" firstAttribute="leading" secondItem="eGC-Ta-E5m" secondAttribute="leading" id="dDR-1l-zxy"/>
-                                    <constraint firstAttribute="height" constant="120" id="keI-xx-l2S"/>
-                                    <constraint firstAttribute="bottom" secondItem="bc0-qL-TSC" secondAttribute="bottom" id="oIt-3W-LJ3"/>
+                                    <constraint firstItem="SzQ-zh-fA3" firstAttribute="top" secondItem="eGC-Ta-E5m" secondAttribute="top" constant="10" id="eEV-QE-LMh"/>
+                                    <constraint firstAttribute="trailing" secondItem="SzQ-zh-fA3" secondAttribute="trailing" constant="10" id="ghb-5q-AEJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="kIi-0N-w6j" secondAttribute="trailing" id="hP0-eZ-aBD"/>
+                                    <constraint firstAttribute="height" constant="150" id="keI-xx-l2S"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -113,21 +80,17 @@
                         <constraints>
                             <constraint firstItem="eGC-Ta-E5m" firstAttribute="leading" secondItem="o6h-4e-373" secondAttribute="leading" constant="50" id="3Ez-Jr-qRs"/>
                             <constraint firstItem="Qrw-vm-1bE" firstAttribute="top" secondItem="o6h-4e-373" secondAttribute="top" id="8sI-w3-bja"/>
-                            <constraint firstItem="Jxw-K6-M5b" firstAttribute="bottom" secondItem="eGC-Ta-E5m" secondAttribute="bottom" id="CiA-KG-8sx"/>
                             <constraint firstItem="eGC-Ta-E5m" firstAttribute="top" secondItem="o6h-4e-373" secondAttribute="top" constant="200" id="HRl-PJ-xYB"/>
                             <constraint firstItem="o6h-4e-373" firstAttribute="bottom" secondItem="Qrw-vm-1bE" secondAttribute="bottom" id="NxZ-H1-2JK"/>
                             <constraint firstItem="o6h-4e-373" firstAttribute="trailing" secondItem="Qrw-vm-1bE" secondAttribute="trailing" id="Sxq-ub-u96"/>
-                            <constraint firstItem="Jxw-K6-M5b" firstAttribute="leading" secondItem="eGC-Ta-E5m" secondAttribute="trailing" constant="5" id="Wkf-1w-bEs"/>
                             <constraint firstItem="Qrw-vm-1bE" firstAttribute="leading" secondItem="o6h-4e-373" secondAttribute="leading" id="qJJ-v0-fGP"/>
-                            <constraint firstItem="Jxw-K6-M5b" firstAttribute="top" secondItem="eGC-Ta-E5m" secondAttribute="top" id="zzI-tI-lC7"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="V81-g5-gZ6" id="540-pM-naQ"/>
                         <outlet property="leadingConstraint" destination="3Ez-Jr-qRs" id="yZi-Dp-J8O"/>
+                        <outlet property="pauseBtn" destination="kIi-0N-w6j" id="CDi-eO-oa1"/>
                         <outlet property="pickerView" destination="eGC-Ta-E5m" id="2fO-9a-Qds"/>
                         <outlet property="speedPicker" destination="bc0-qL-TSC" id="30H-06-VFs"/>
-                        <outlet property="superCollectionView" destination="Jxw-K6-M5b" id="2rf-QK-Ner"/>
                         <outlet property="superView" destination="Qrw-vm-1bE" id="Yuh-Pv-JbK"/>
                         <outlet property="topConstraint" destination="HRl-PJ-xYB" id="lYx-i9-5sX"/>
                         <outlet property="windowView" destination="V32-AV-FEk" id="Qtw-UK-ycD"/>
@@ -136,11 +99,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D7N-1z-ymR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="4Xc-9l-Dd7">
                     <connections>
-                        <action selector="tappedBackground:" destination="X4g-Ww-Kze" id="QUQ-Zc-P5t"/>
+                        <action selector="closePopupView:" destination="X4g-Ww-Kze" id="5Xc-ZP-IYE"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="163.768115942029" y="57.589285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pause.fill" catalog="system" width="116" height="128"/>
+        <image name="play.fill" catalog="system" width="116" height="128"/>
+        <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
